<resources>
    <string name="app_name">Activity Tracker</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_manage">Manage Activities</string>
    <string name="action_logout">Log Out</string>

    <string name="text_tagline"><b>Track all your movements\ntoday.</b></string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>

    <string name="text_signup">Sign Up</string>
    <string name="text_login">Login</string>
    <string name="text_start">Start</string>
    <string name="text_continue_with_google">Continue with Google</string>
    <string name="text_new_sign_up">New to track? <b>Sign up here.</b></string>
    <string name="text_already_tracker">Already a tracker? <b>Log In</b></string>
    <string name="text_terms">By using Activity Tracker, you agrees to Activity Tracker\'s\n<b>Terms of Use</b> and <b>Privacy Policy</b></string>

    <string name="text_choose">Choose activities to track</string>
    <string name="text_start_tracking">Start Tracking</string>

    <string name="text_no_activity">No activities tracked yet.</string>

    <string name="text_logging_out">Logging out</string>

    <!-- Activities --> 
    <string name="activity_walking">Walking</string>
     <string name="activity_in_vehicle">In Vehicle</string> 
    <string name="activity_biking">Biking</string> 
    <string name="activity_running">Running</string> 
    <string name="activity_swimming">Swimming</string> 
    <string name="activity_unknown">Unknown Activity</string>

    <!--Activity List Screen-->
    <string name="no_activities_for_the_day">No activities for the day</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
</resources>
